[package]
name = "spdb"
version = "0.1.0"
authors = ["nunya <nunya@biznatch.io>"]
edition = "2018"

[dependencies]
tokio = {version = "0.2", features = ["net", "fs"]}
async_std = "1.3.0" # used only for futures-aware sync primitives 
base64 = "0.11.0"
rand_core = "0.5.1"
rand_isaac = "0.2.0"
toml = "0.5.5"
